--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -860,6 +860,7 @@ a:hover {
 .work-img {
   display: block;
   overflow: hidden;
+  max-height: 350px;
 }
 .work-img img {
   transition: all 1s;
@@ -889,6 +890,13 @@ a:hover {
 
 .w-title {
   font-size: 1.2rem;
+}
+
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
 }
 
 /*--------------------------------------------------------------
